--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "rxjs-tslint": "^0.1.6",
     "ts-node": "~7.0.1",
     "tslint": "^5.12.0",
-    "typescript": "^3.1.6",
+    "typescript": "~3.1.6",
     "webpack": "^4.28.3"
   }
 }
