--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.6.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "popper.js": "^1.14.6",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
@@ -55,6 +56,7 @@
     "ts-node": "~7.0.1",
     "tslint": "^5.12.0",
     "typescript": "~3.1.6",
-    "webpack": "^4.28.3"
+    "webpack": "^4.28.3",
+    "webpack-dev-server": "^3.1.14"
   }
 }
