--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "git pull && ng build --prod --base-href /tms/ && sudo mv dist ../../html/ && sudo rm -r ../../html/tms && sudo mv ../../html/dist ../../html/tms"
+    "deploy": "git pull && ng build --base-href /tms/ && sudo mv dist ../../html/ && sudo rm -r ../../html/tms && sudo mv ../../html/dist ../../html/tms"
   },
   "private": true,
   "dependencies": {
